# fakerootng

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  NEWS  README  README.packaging  bootstrap  chroot.cpp  chroot.h  configure.ac  credentials.cpp  daemon.cpp  daemon.h  epoll_event_handlers.h  exceptions.h  fakeroot-ng.man  file.cpp  file_lie.cpp  file_lie.h  input_stream.cpp  input_stream.h  lockless_event.cpp  lockless_event.h  log.cpp  log.h  main.c  main.cpp  memory.cpp  parent.c  parent.cpp  parent.h  platform.h  process.cpp  process.h  proxy_function.cpp  proxy_function.h  ptrace.cpp  scope_guard.h  (+9 more)
arch/: platform.h
arch/linux/: .gitignore  Makefile.template.in  os.c  os.cpp  os.h
arch/linux/arm/: platform.c  platform_specific.h
arch/linux/i386/: Makefile.am  Makefile.in  platform.c  platform.cpp  platform_specific.h
arch/linux/powerpc/: Makefile.in  platform.c  platform_specific.h
arch/linux/x86_64/: platform.c  platform.cpp  platform_specific.h  platform_specific_internal.h
tests/: .gitignore  Makefile.am  calc_defaults.c  calc_defaults.cpp  exec_mem_use.c  exercise.c  mmap.c  munmap.c  procmem.c  segfault.c  signal.c  vfork.c  wait_test.cpp
unit_tests/: .gitignore  Makefile.am  lockless.cpp  worker_queue_test.cpp
