noinst_PROGRAMS=fbomb wait_test exercise calc_defaults pwd getsiginfo thread vfork procmem munmap mmap segfault signal exec_mem_use

wait_test_SOURCES=wait_test.cpp
fbomb_SOURCES=fbomb.cpp
exercise_SOURCES=exercise.c
calc_defaults_SOURCES=calc_defaults.cpp
pwd_SOURCES=pwd.c
getsiginfo_SOURCES=getsiginfo.c
thread_SOURCES=thread.c
thread_LDFLAGS=-pthread
vfork_SOURCES=vfork.c
procmem_SOURCES=procmem.c
munmap_SOURCES=munmap.c
mmap_SOURCES=mmap.c
segfault_SOURCES=segfault.c
signal_SOURCES=signal.c
exec_mem_use_SOURCES=exec_mem_use.c
